# br.puc-rio.inf.www.roberto-lpeg

./: CMakeLists.txt  Jenkinsfile  build_artifact.py  dependency-log-lua5.4.xml
.github/workflows/: main.yml
cmake/tests/: mingw_dll_dependencies.py
cmake/tools/: apply_patches.py  generate_hash.py
lpeg/: CMakeLists.txt  __README__.txt
lpeg/copy_over/: CMakeLists.txt
lpeg/installer/lua5.1/: lpeg.xml
lpeg/installer/lua5.4/: lpeg.xml
